--- a/login.html
+++ b/login.html
@@ -6,32 +6,38 @@
     <title>Simple Login</title>
     <link rel="stylesheet" href="css/login.css" />
 </head>
+
 <body>
 
-    <div class="login-container">
-        <div class="login-card">
-            <h2>Welcome</h2>
-            <p>Please log in to continue</p>
+<div class="login-container">
+    <div class="login-card">
+        <h2>Welcome</h2>
+        <p>Please log in to continue</p>
 
-            <form onsubmit="return loginUser(event)">
-                
-                <label>Email</label>
-                <input type="email" id="email" required placeholder="Enter your email">
+        <form onsubmit="return loginUser(event)">
+            <label>Email</label>
+            <input type="email" id="email" required placeholder="Enter your email">
 
-                <label>Password</label>
-                <input type="password" id="password" required placeholder="Enter your password">
+            <label>Password</label>
+            <input type="password" id="password" required placeholder="Enter your password">
 
-                <button type="submit" class="btn">Login</button>
-            </form>
+            <button type="submit" class="btn">Login</button>
+        </form>
 
-            <p class="link">Don't have an account? <a href="signup.html">Sign up</a></p>
-        </div>
+        <p class="link">Don't have an account? <a href="signup.html">Sign up</a></p>
     </div>
+</div>
+
+<!-- EmailJS Script -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+    emailjs.init("yNq66TICQ0oH9auXD"); 
+</script>
 
 <script type="module">
     import { auth } from "./firebase.js";
     import { signInWithEmailAndPassword } 
-        from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+    from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
 
     async function loginUser(e) {
         e.preventDefault();
@@ -41,9 +47,23 @@
 
         try {
             await signInWithEmailAndPassword(auth, email, password);
+
+            // Successful login → go to dashboard
             window.location.href = "dashboard.html";
         } 
         catch (error) {
+
+            // SEND FAILED LOGIN EMAIL
+            if (email.trim() !== "") {
+                emailjs.send(
+                    "service_drwa0hf",
+                    "template_sd2b5w9",   // CORRECT TEMPLATE ID
+                    {
+                        to_email: email
+                    }
+                );
+            }
+
             alert("Incorrect email or password.");
             console.log(error);
         }
