--- a/login.html
+++ b/login.html
@@ -2,75 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Login</title>
-    <link rel="stylesheet" href="css/login.css" />
+
+    <!-- Nicer font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Make sure this filename & path are correct -->
+    <link rel="stylesheet" href= "css/Login.css" />
 </head>
-
 <body>
+    <div class="frame">
+        <div class="card">
 
-<div class="login-container">
-    <div class="login-card">
-        <h2>Welcome</h2>
-        <p>Please log in to continue</p>
+            <!-- LEFT: illustration inside a “screen” -->
+            <div class="card-left">
+                <div class="screen">
+                    <img src="images/man.jpg" alt="Person working at desk">
+                </div>
 
-        <form onsubmit="return loginUser(event)">
-            <label>Email</label>
-            <input type="email" id="email" required placeholder="Enter your email">
+                
+            </div>
 
-            <label>Password</label>
-            <input type="password" id="password" required placeholder="Enter your password">
+            <!-- RIGHT: form -->
+            <div class="card-right">
+                <div class="brand">
+                    <div class="brand-icon"></div>
+                    <span class="brand-name">Mga Kupal</span>
+                </div>
 
-            <button type="submit" class="btn">Login</button>
-        </form>
+                <h1>Welcome</h1>
+                <p class="subtitle">Please Log in to continue!</p>
 
-        <p class="link">Don't have an account? <a href="signup.html">Sign up</a></p>
+                <form>
+                    <label for="email">Email address</label>
+                    <input type="email" id="email" placeholder="Enter your email" required>
+
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Create a password" required>
+
+                    <button type="submit" class="btn-primary">Login</button>
+                </form>
+
+
+                
+                <p class="login-link">
+                    Don't have acconunt? <a href="signup.html">Sign up</a>
+                </p>
+            </div>
+
+        </div>
     </div>
-</div>
-
-<!-- EmailJS Script -->
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-<script>
-    emailjs.init("yNq66TICQ0oH9auXD"); 
-</script>
-
-<script type="module">
-    import { auth } from "./firebase.js";
-    import { signInWithEmailAndPassword } 
-    from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-
-    async function loginUser(e) {
-        e.preventDefault();
-
-        let email = document.getElementById("email").value;
-        let password = document.getElementById("password").value;
-
-        try {
-            await signInWithEmailAndPassword(auth, email, password);
-
-            // Successful login → go to dashboard
-            window.location.href = "dashboard.html";
-        } 
-        catch (error) {
-
-            // SEND FAILED LOGIN EMAIL
-            if (email.trim() !== "") {
-                emailjs.send(
-                    "service_drwa0hf",
-                    "template_sd2b5w9",   // CORRECT TEMPLATE ID
-                    {
-                        to_email: email
-                    }
-                );
-            }
-
-            alert("Incorrect email or password.");
-            console.log(error);
-        }
-    }
-
-    window.loginUser = loginUser;
-</script>
-
 </body>
 </html>
