--- a/login.html
+++ b/login.html
@@ -4,29 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Login</title>
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css" />
 </head>
 
 <body>
 
-<div class="login-container">
-    <div class="login-card">
-        <h2>Welcome</h2>
-        <p>Please log in to continue</p>
+<div class="frame">
+        <div class="card">
 
-        <form onsubmit="return loginUser(event)">
-            <label>Email</label>
-            <input type="email" id="email" required placeholder="Enter your email">
+            <!-- LEFT: illustration inside a “screen” -->
+            <div class="card-left">
+                <div class="screen">
+                    <img src="photo/girl.jpg" alt="Person working at desk">
+                </div>
+            </div>
 
-            <label>Password</label>
-            <input type="password" id="password" required placeholder="Enter your password">
+            <!-- RIGHT: form -->
+            <div class="card-right">
+                <div class="brand">
+                    <div class="brand-icon"></div>
+                    <span class="brand-name">Mga Kupal</span>
+                </div>
 
-            <button type="submit" class="btn">Login</button>
-        </form>
+                <h1>Welcome</h1>
+                <p class="subtitle">Please log in to continue</p>
 
-        <p class="link">Don't have an account? <a href="signup.html">Sign up</a></p>
+                <!-- same variable names + handler as your simple version -->
+                <form onsubmit="return loginUser(event)">
+                    <label>Email</label>
+                    <input
+                        type="email"
+                        id="email"
+                        required
+                        placeholder="Enter your email"
+                    >
+
+                    <label>Password</label>
+                    <input
+                        type="password"
+                        id="password"
+                        required
+                        placeholder="Enter your password"
+                    >
+
+                    <!-- keep old .btn and new .btn-primary if you like -->
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
+
+                <p class="login-link">
+                    Don't have an account? <a href="signup.html">Sign up</a>
+                </p>
+            </div>
+
+        </div>
     </div>
-</div>
 
 <!-- EmailJS Script -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
