--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 
     <title>Simple Login</title>
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="css/Login.css" />
 </head>
 <body>
     <div class="frame">
