update the index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <meta http-equiv="refresh" content="0; url=login.html">
 </head>
 <body>
-  <p>Redirecting...</p>
+  <p>Redirecting...please wait.........Miguuuuuuuh</p>
 </body>
 </html>
