revising the reset password concept

--- a/reset_password.html
+++ b/reset_password.html
@@ -3,42 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Reset</title>
+    <title>Set New Password</title>
 
-    <!-- CSS -->
     <link rel="stylesheet" href="css/reset_password.css">
-
-    <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
 <div class="reset-container">
+    <h2>Set New Password</h2>
+    <p>Enter your new password below.</p>
 
-    <!-- STEP 1: Request reset link -->
-    <div id="step-request">
-        <h2>Forgot Password?</h2>
-        <p>Enter your email to receive a reset link.</p>
+    <input type="password" id="newPass" placeholder="New Password" required>
+    <input type="password" id="confirmPass" placeholder="Confirm Password" required>
 
-        <input type="email" id="email" placeholder="Enter your email" required>
-        <button class="btn" onclick="sendReset()">Send Reset Link</button>
-    </div>
-
-    <!-- STEP 2: Set New Password -->
-    <div id="step-reset" class="hidden">
-        <h2>Set New Password</h2>
-        <p>Enter your new password below.</p>
-
-        <input type="password" id="newPass" placeholder="New Password" required>
-        <input type="password" id="confirmPass" placeholder="Confirm Password" required>
-
-        <button class="btn" onclick="doReset()">Update Password</button>
-    </div>
-
+    <button class="btn" onclick="resetNow()">Update Password</button>
 </div>
 
-<!-- JS -->
-<script type="module" src="reset_password.js"></script>
+<script type="module">
+    import { auth } from "./firebase.js";
+    import {
+        verifyPasswordResetCode,
+        confirmPasswordReset
+    } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+
+    const params = new URLSearchParams(window.location.search);
+    const oobCode = params.get("oobCode");
+
+    if (!oobCode) {
+        Swal.fire({
+            icon: "error",
+            title: "Invalid Link",
+            text: "Your reset link is missing the code."
+        });
+    }
+
+    window.resetNow = async function () {
+        const pass = document.getElementById("newPass").value;
+        const confirm = document.getElementById("confirmPass").value;
+
+        if (pass !== confirm) {
+            Swal.fire({
+                icon: "error",
+                title: "Mismatch",
+                text: "Passwords do not match."
+            });
+            return;
+        }
+
+        try {
+            await verifyPasswordResetCode(auth, oobCode);
+            await confirmPasswordReset(auth, oobCode, pass);
+
+            Swal.fire({
+                icon: "success",
+                title: "Password Updated",
+                text: "You can now log in.",
+                confirmButtonColor: "#1a73e8"
+            }).then(() => {
+                window.location.href = "login.html";
+            });
+
+        } catch (err) {
+            Swal.fire({
+                icon: "error",
+                title: "Error",
+                text: "Reset link expired or invalid."
+            });
+        }
+    };
+</script>
 
 </body>
 </html>
