reset password...baw sakto bani

--- a/reset_password.html
+++ b/reset_password.html
@@ -1,78 +1,148 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Set New Password</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Set New Password</title>
 
-        <link rel="stylesheet" href="css/reset_password.css">
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    </head>
-    <body>
+    <link rel="stylesheet" href="css/reset_password.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <div class="reset-container">
-        <h2>Set New Password</h2>
-        <p>Enter your new password below.</p>
+    <style>
+        /* Password strength UI (simple inline for this page) */
+        .strength-box {
+            font-size: 13px;
+            margin-top: 10px;
+            text-align: left;
+        }
+        .strength-box p {
+            margin: 4px 0;
+        }
+    </style>
+</head>
+<body>
 
-        <input type="password" id="newPass" placeholder="New Password" required>
-        <input type="password" id="confirmPass" placeholder="Confirm Password" required>
+<div class="reset-container">
+    <h2>Set New Password</h2>
+    <p>Enter your new password below.</p>
 
-        <button class="btn" onclick="resetNow()">Update Password</button>
+    <input type="password" id="newPass" placeholder="New Password" required>
+
+    <!-- Strength hints -->
+    <div class="strength-box">
+        <p id="len">❌ At least 8 characters</p>
+        <p id="upper">❌ At least 1 uppercase letter</p>
+        <p id="lower">❌ At least 1 lowercase letter</p>
+        <p id="num">❌ At least 1 number</p>
     </div>
 
-    <script type="module">
-        import { auth } from "./firebase.js";
-        import {
-            verifyPasswordResetCode,
-            confirmPasswordReset
-        } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+    <input type="password" id="confirmPass" placeholder="Confirm Password" required>
+    <p id="match" style="font-size: 13px; margin: 5px 0; color: #d33;">❌ Passwords do not match</p>
 
-        const params = new URLSearchParams(window.location.search);
-        const oobCode = params.get("oobCode");
+    <button class="btn" onclick="resetNow()">Update Password</button>
+</div>
 
-        if (!oobCode) {
+<script type="module">
+    import { auth } from "./firebase.js";
+    import {
+        verifyPasswordResetCode,
+        confirmPasswordReset
+    } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+
+    const params = new URLSearchParams(window.location.search);
+    const oobCode = params.get("oobCode");
+
+    if (!oobCode) {
+        Swal.fire({
+            icon: "error",
+            title: "Invalid Link",
+            text: "Your reset link is missing the code."
+        });
+    }
+
+    // Strength check references
+    const newPassInput = document.getElementById("newPass");
+    const confirmPassInput = document.getElementById("confirmPass");
+
+    const len = document.getElementById("len");
+    const upper = document.getElementById("upper");
+    const lower = document.getElementById("lower");
+    const num = document.getElementById("num");
+    const match = document.getElementById("match");
+
+    // Live strength checker
+    newPassInput.addEventListener("input", () => {
+        const value = newPassInput.value;
+
+        len.textContent = value.length >= 8 ? "✅ At least 8 characters" : "❌ At least 8 characters";
+        upper.textContent = /[A-Z]/.test(value) ? "✅ At least 1 uppercase letter" : "❌ At least 1 uppercase letter";
+        lower.textContent = /[a-z]/.test(value) ? "✅ At least 1 lowercase letter" : "❌ At least 1 lowercase letter";
+        num.textContent = /[0-9]/.test(value) ? "✅ At least 1 number" : "❌ At least 1 number";
+    });
+
+    // Live match check
+    confirmPassInput.addEventListener("input", () => {
+        if (confirmPassInput.value === newPassInput.value) {
+            match.textContent = "✅ Passwords match";
+            match.style.color = "green";
+        } else {
+            match.textContent = "❌ Passwords do not match";
+            match.style.color = "#d33";
+        }
+    });
+
+    // Reset Now function
+    window.resetNow = async function () {
+        const pass = newPassInput.value;
+        const confirm = confirmPassInput.value;
+
+        // Match check
+        if (pass !== confirm) {
             Swal.fire({
                 icon: "error",
-                title: "Invalid Link",
-                text: "Your reset link is missing the code."
+                title: "Mismatch",
+                text: "Passwords do not match."
             });
+            return;
         }
 
-        window.resetNow = async function () {
-            const pass = document.getElementById("newPass").value;
-            const confirm = document.getElementById("confirmPass").value;
+        // Strength rules
+        if (
+            pass.length < 8 ||
+            !/[A-Z]/.test(pass) ||
+            !/[a-z]/.test(pass) ||
+            !/[0-9]/.test(pass)
+        ) {
+            Swal.fire({
+                icon: "warning",
+                title: "Weak Password",
+                text: "Password must include uppercase, lowercase, number, and at least 8 characters."
+            });
+            return;
+        }
 
-            if (pass !== confirm) {
-                Swal.fire({
-                    icon: "error",
-                    title: "Mismatch",
-                    text: "Passwords do not match."
-                });
-                return;
-            }
+        try {
+            await verifyPasswordResetCode(auth, oobCode);
+            await confirmPasswordReset(auth, oobCode, pass);
 
-            try {
-                await verifyPasswordResetCode(auth, oobCode);
-                await confirmPasswordReset(auth, oobCode, pass);
+            Swal.fire({
+                icon: "success",
+                title: "Password Updated",
+                text: "You can now log in.",
+                confirmButtonColor: "#1a73e8"
+            }).then(() => {
+                window.location.href = "login.html";
+            });
 
-                Swal.fire({
-                    icon: "success",
-                    title: "Password Updated",
-                    text: "You can now log in.",
-                    confirmButtonColor: "#1a73e8"
-                }).then(() => {
-                    window.location.href = "login.html";
-                });
+        } catch (err) {
+            Swal.fire({
+                icon: "error",
+                title: "Error",
+                text: "Reset link expired or invalid."
+            });
+        }
+    };
+</script>
 
-            } catch (err) {
-                Swal.fire({
-                    icon: "error",
-                    title: "Error",
-                    text: "Reset link expired or invalid."
-                });
-            }
-        };
-    </script>
-
-    </body>
-    </html>
+</body>
+</html>
