--- a/send_reset.html
+++ b/send_reset.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password</title>
 
-    <link rel="stylesheet" href="css/reset_password.css">
+    <link rel="stylesheet" href="css/send_reset.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
