match password(reset pass)

--- a/reset_password.html
+++ b/reset_password.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <style>
-        /* Password strength UI (simple inline for this page) */
+        /* Password strength UI */
         .strength-box {
             font-size: 13px;
             margin-top: 10px;
@@ -60,7 +60,7 @@
         });
     }
 
-    // Strength check references
+    // Inputs
     const newPassInput = document.getElementById("newPass");
     const confirmPassInput = document.getElementById("confirmPass");
 
@@ -70,31 +70,46 @@
     const num = document.getElementById("num");
     const match = document.getElementById("match");
 
-    // Live strength checker
+    /* ============================
+       LIVE STRENGTH CHECKER
+       ============================ */
     newPassInput.addEventListener("input", () => {
-        const value = newPassInput.value;
+        const value = newPassInput.value.trim();
 
         len.textContent = value.length >= 8 ? "✅ At least 8 characters" : "❌ At least 8 characters";
         upper.textContent = /[A-Z]/.test(value) ? "✅ At least 1 uppercase letter" : "❌ At least 1 uppercase letter";
         lower.textContent = /[a-z]/.test(value) ? "✅ At least 1 lowercase letter" : "❌ At least 1 lowercase letter";
         num.textContent = /[0-9]/.test(value) ? "✅ At least 1 number" : "❌ At least 1 number";
+
+        checkMatch();
     });
 
-    // Live match check
-    confirmPassInput.addEventListener("input", () => {
-        if (confirmPassInput.value === newPassInput.value) {
+    /* ============================
+       FIXED PASSWORD MATCH CHECKER
+       ============================ */
+    function checkMatch() {
+        const a = newPassInput.value.trim();
+        const b = confirmPassInput.value.trim();
+
+        if (a !== "" && b !== "" && a === b) {
             match.textContent = "✅ Passwords match";
             match.style.color = "green";
         } else {
             match.textContent = "❌ Passwords do not match";
             match.style.color = "#d33";
         }
-    });
+    }
 
-    // Reset Now function
+    confirmPassInput.addEventListener("input", checkMatch);
+    newPassInput.addEventListener("blur", checkMatch);
+    confirmPassInput.addEventListener("blur", checkMatch);
+
+    /* ============================
+       RESET PASSWORD LOGIC
+       ============================ */
     window.resetNow = async function () {
-        const pass = newPassInput.value;
-        const confirm = confirmPassInput.value;
+        const pass = newPassInput.value.trim();
+        const confirm = confirmPassInput.value.trim();
 
         // Match check
         if (pass !== confirm) {
@@ -106,7 +121,7 @@
             return;
         }
 
-        // Strength rules
+        // Strength validation
         if (
             pass.length < 8 ||
             !/[A-Z]/.test(pass) ||
