--- a/reset_password.html
+++ b/reset_password.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <style>
-        
+        /* Password strength UI */
         .strength-box {
             font-size: 13px;
             margin-top: 10px;
