change group name

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             <div class="card-right">
                 <div class="brand">
                     <div class="brand-icon"></div>
-                    <span class="brand-name">Mga Kupal</span>
+                    <span class="brand-name">Team Dayag</span>
                 </div>
 
                 <h1>Welcome</h1>
