--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
             <div class="card-right">
                 <div class="brand">
                     <div class="brand-icon"></div>
-                    <span class="brand-name">Mga Kupal</span>
+                    <span class="brand-name">Team Dayag</span>
                 </div>
 
                 <h1>Create Account</h1>
